# venice

./: .envrc  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  build.rs  dev.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
.pi/skills/write-stubs/: SKILL.md
.zed/: settings.json
MotionLibrary/: DriveTrains.py
firmware/: v5.ld
link/: v5.ld  venice.ld
micropython-rs/: Cargo.toml
micropython-rs/src/: fun.rs  gc.rs  generator.rs  global_data.rs  init.rs  lib.rs  map.rs  module.rs  nlr.rs  obj.rs  print.rs  qstr.rs  raw.rs  reentrance.rs  reentrancy.rs  singleton.rs  state.rs  str.rs  vstr.rs
port/: Makefile  boot.S  modvasyncio.c  mpconfigport.h  mphalport.c  mphalport.h  newlib_stubs.c  sdk.h  startup.c  store_gc_regs.S  venice_qstrdefs.h
src/: libc.rs  main.rs  module_map.rs  serial.rs  stubs.rs  vbt.rs  vcbc.rs  vpt.rs
src/exports/: import.rs  mod.rs  readline.rs
src/micropython/: exports.rs  mod.rs  obj.rs  qstr.rs  raw.rs  readline.rs  singleton.rs
src/vasyncio/: event_loop.rs  mod.rs
stubs/: prompt.md
stubs/venice/: Drivetrains.py  __init__.py
venice/: pyproject.toml  stub-progress.md
venice/venice/: __init__.py  vasyncio.py
venice/venice.egg-info/: PKG-INFO  SOURCES.txt
