[package]
name = "venice"
license = "MPL-2.0"
version = "0.1.0"
edition = "2024"

[dependencies]
micropython-rs.path = "./micropython-rs"
venice-program-table.workspace = true
cty = "0.2.2"
hashbrown.workspace = true
no_std_io = "0.6.0"
paste = "1.0.15"
spin = "0.10.0"
talc = "4.4.3"
vex-sdk = "0.26.0"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[profile.release]
lto = true
strip = true
opt-level = "s"

[build-dependencies]
format-bytes = "0.3.0"
regex = "1.11.1"

[workspace]
resolver = "3"
members = ["micropython-rs"]

[workspace.dependencies]
hashbrown = "0.15.4"

[workspace.dependencies.venice-program-table]
# path = "../venice-program-table"
git = "https://github.com/venice-v5/venice-program-table.git"
rev = "e5a1762be2eeaf94841bb972af4e447bbf5f4eea"
